# interact2025

./: LICENSE  README.md  data_analysis.ipynb  environment.yml  pyproject.toml
data/: d1_nature_classification_openai.csv  d2_nature_classification_gemini.csv  d3_nature_classification_llama.csv  d4_locale_classification_openai.csv  d5_locale_classification_gemini.csv  d6_locale_classification_llama.csv
dataset/: elicit_cam.csv  opposite_gestures.csv
outputs/: elicitation_dataset.csv  gesture_counts.csv  gesture_counts_hg_exp.csv  gesture_counts_no_hg_exp.csv
pgf/: dissimilarity_consensus.pgf  lda.pgf  locale_confusion_matrix.pgf  nature_confusion_matrix.pgf  taxonomy_proportion.pgf
src/: s0_create_gesture_embeddings.py  s1_openai_nature_classifier.py  s2_gemini_nature_classifier.py  s3_ollama_nature_classifier.py  s4_openai_locale_classifier.py  s5_gemini_locale_classifier.py  s6_ollama_locale_classifier.py
